[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprite/bullet/tornado.png" type="Texture" id=1]
[ext_resource path="res://script/Bullet/Tornado.gd" type="Script" id=2]
[ext_resource path="res://scene/Bullet/Tornado_mini.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/Bullet/tornado.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.2267, 89.3373 )

[sub_resource type="Animation" id=2]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0 ]
}

[node name="Tornado" type="Area2D" groups=[
"Enemy",
"No_Collision",
]]
scale = Vector2( 1.5, 2.5 )
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 1.69831, -67.4671 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.75714, -64.9373 )
texture = ExtResource( 1 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Run = SubResource( 2 )

[node name="Tornado_mini" parent="." instance=ExtResource( 3 )]
position = Vector2( 0.783653, 25.3389 )
scale = Vector2( 0.3, 0.3 )

[node name="Timer_Prepare" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Tornado_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Tornado_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer_Prepare" to="." method="_on_Timer_Prepare_timeout"]
